Feature/inf2 22 (#10)
* Setting up db-backup-service

* Adding more chart files

* Preparing configmap

* Beginning work on new deployment values

* Put together more secrets

* added more secrets

* Added liveness probe

* Cleanup

* More progress with values

* Progress

* Cleaned up configmap

* Disabled preview flag

* Changed the settings for backup intervals

* Cleanup

* Fixed broken tests

* Updated helm info

* Fixing helm

* Adding more helm files

* Disabled the preview features

* Fixed deployment repo

* Updated backup configs

* More backup config improvements